--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,3 @@
-upstream client-server {
-    server client-server:3000;
-}
-
 upstream backend-server {
     server backend-server:4000;
 }
@@ -9,16 +5,11 @@ upstream backend-server {
 server {
     listen 80;
     location / {
-        proxy_pass http://client-server;
+        proxy_pass http://backend-server;
     }
     location /api {
         rewrite /api/(.*) /$1 break;
         proxy_pass http://backend-server;
     }
-    location /ws {
-        proxy_pass http://client-server;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
+    
 }
